test/corpus/EOR.txt
==========================
EOR #$BB
==========================

eor #$b3
eor #233
eor #%1101110

---

(asm
  (inst
    (imm_opc
      (eor_opc)
      (imm_prefix)
      (num_8
        (hex_num_8))))
  (inst
    (imm_opc
      (eor_opc)
      (imm_prefix)
      (num_8
        (dec_num_8))))
  (inst
    (imm_opc
      (eor_opc)
      (imm_prefix)
      (num_8
        (bin_num_8)))))

==========================
EOR $LL
==========================

eor $02
eor 005
eor %11011001

---

(asm
  (inst
    (zpg_opc
      (eor_opc)
      (num_8
        (hex_num_8))))
  (inst
    (zpg_opc
      (eor_opc)
      (num_8
        (dec_num_8))))
  (inst
    (zpg_opc
      (eor_opc)
      (num_8
        (bin_num_8)))))

==========================
EOR $LL,X
==========================

eor $60,x
eor 199,x
eor %1001100,x

---

(asm
  (inst
    (zpg_x_opc
      (eor_opc)
      (num_8
        (hex_num_8))
      (comma)
      (x_reg)))
  (inst
    (zpg_x_opc
      (eor_opc)
      (num_8
        (dec_num_8))
      (comma)
      (x_reg)))
  (inst
    (zpg_x_opc
      (eor_opc)
      (num_8
        (bin_num_8))
      (comma)
      (x_reg))))

==========================
EOR $LLHH
==========================

eor $b891
eor 47249
eor %1011100010010001

---

(asm
  (inst
    (abs_opc
      (eor_opc)
      (num_16
        (hex_num_16))))
  (inst
    (abs_opc
      (eor_opc)
      (num_16
        (dec_num_16))))
  (inst
    (abs_opc
      (eor_opc)
      (num_16
        (bin_num_16)))))

==========================
EOR $LLHH,X
==========================

eor $85fc,x
eor 1843,x
eor %11011100111000,x

---

(asm
  (inst
    (abs_x_opc
      (eor_opc)
      (num_16
        (hex_num_16))
      (comma)
      (x_reg)))
  (inst
    (abs_x_opc
      (eor_opc)
      (num_16
        (dec_num_16))
      (comma)
      (x_reg)))
  (inst
    (abs_x_opc
      (eor_opc)
      (num_16
        (bin_num_16))
      (comma)
      (x_reg))))

==========================
EOR $LLHH,Y
==========================

eor $dc49,y
eor 56393,y
eor %1101110001001001,y

---

(asm
  (inst
    (abs_y_opc
      (eor_opc)
      (num_16
        (hex_num_16))
      (comma)
      (y_reg)))
  (inst
    (abs_y_opc
      (eor_opc)
      (num_16
        (dec_num_16))
      (comma)
      (y_reg)))
  (inst
    (abs_y_opc
      (eor_opc)
      (num_16
        (bin_num_16))
      (comma)
      (y_reg))))

==========================
EOR ($LL,X)
==========================

eor ($DB,x)
eor (219,x)
eor (%11011011,x)

---

(asm
  (inst
    (x_ind_opc
      (eor_opc)
      (l_parentheis)
      (num_8
        (hex_num_8))
      (comma)
      (x_reg)
      (r_parentheis)))
  (inst
    (x_ind_opc
      (eor_opc)
      (l_parentheis)
      (num_8
        (dec_num_8))
      (comma)
      (x_reg)
      (r_parentheis)))
  (inst
    (x_ind_opc
      (eor_opc)
      (l_parentheis)
      (num_8
        (bin_num_8))
      (comma)
      (x_reg)
      (r_parentheis))))

==========================
EOR ($LL),Y
==========================

eor ($A9),y
eor (169),y
eor (%10101001),y

---

(asm
  (inst
    (ind_y_opc
      (eor_opc)
      (l_parentheis)
      (num_8
        (hex_num_8))
      (r_parentheis)
      (comma)
      (y_reg)))
  (inst
    (ind_y_opc
      (eor_opc)
      (l_parentheis)
      (num_8
        (dec_num_8))
      (r_parentheis)
      (comma)
      (y_reg)))
  (inst
    (ind_y_opc
      (eor_opc)
      (l_parentheis)
      (num_8
        (bin_num_8))
      (r_parentheis)
      (comma)
      (y_reg))))
