test/corpus/INC.txt
==========================
INC $LL
==========================

inc $02
inc 005
inc %11011001

---

(asm
  (inst
    (zpg_opc
      (inc_opc)
      (num_8
        (hex_num_8))))
  (inst
    (zpg_opc
      (inc_opc)
      (num_8
        (dec_num_8))))
  (inst
    (zpg_opc
      (inc_opc)
      (num_8
        (bin_num_8)))))

==========================
INC $LL,X
==========================

inc $60,x
inc 199,x
inc %1001100,x

---

(asm
  (inst
    (zpg_x_opc
      (inc_opc)
      (num_8
        (hex_num_8))
      (comma)
      (x_reg)))
  (inst
    (zpg_x_opc
      (inc_opc)
      (num_8
        (dec_num_8))
      (comma)
      (x_reg)))
  (inst
    (zpg_x_opc
      (inc_opc)
      (num_8
        (bin_num_8))
      (comma)
      (x_reg))))

==========================
INC $LLHH
==========================

inc $b891
inc 47249
inc %1011100010010001

---

(asm
  (inst
    (abs_opc
      (inc_opc)
      (num_16
        (hex_num_16))))
  (inst
    (abs_opc
      (inc_opc)
      (num_16
        (dec_num_16))))
  (inst
    (abs_opc
      (inc_opc)
      (num_16
        (bin_num_16)))))

==========================
INC $LLHH,X
==========================

inc $85fc,x
inc 1843,x
inc %11011100111000,x

---

(asm
  (inst
    (abs_x_opc
      (inc_opc)
      (num_16
        (hex_num_16))
      (comma)
      (x_reg)))
  (inst
    (abs_x_opc
      (inc_opc)
      (num_16
        (dec_num_16))
      (comma)
      (x_reg)))
  (inst
    (abs_x_opc
      (inc_opc)
      (num_16
        (bin_num_16))
      (comma)
      (x_reg))))
