test/corpus/JMP.txt
==========================
JMP $HHLL
==========================

jmp $4000
jmp 16384
jmp %100000000000000

---

(asm
  (inst
    (abs_opc
      (jmp_opc)
      (num_16
        (hex_num_16))))
  (inst
    (abs_opc
      (jmp_opc)
      (num_16
        (dec_num_16))))
  (inst
    (abs_opc
      (jmp_opc)
      (num_16
        (bin_num_16)))))

==========================
JMP ($HHLL)
==========================

jmp ($4000)
jmp (16384)
jmp (%100000000000000)

---

(asm
  (inst
    (ind_opc
      (jmp_opc)
      (l_parentheis)
      (num_16
        (hex_num_16))
      (r_parentheis)))
  (inst
    (ind_opc
      (jmp_opc)
      (l_parentheis)
      (num_16
        (dec_num_16))
      (r_parentheis)))
  (inst
    (ind_opc
      (jmp_opc)
      (l_parentheis)
      (num_16
        (bin_num_16))
      (r_parentheis))))
