test/corpus/LDA.txt
==========================
LDA #$BB
==========================

lda #$b3
lda #233
lda #%1101110

---

(asm
  (inst
    (imm_opc
      (lda_opc)
      (num_8
        (hex_num_8))))
  (inst
    (imm_opc
      (lda_opc)
      (num_8
        (dec_num_8))))
  (inst
    (imm_opc
      (lda_opc)
      (num_8
        (bin_num_8)))))

==========================
LDA $LL
==========================

lda $02
lda 005
lda %11011001

---

(asm
  (inst
    (zpg_opc
      (lda_opc)
      (num_8
        (hex_num_8))))
  (inst
    (zpg_opc
      (lda_opc)
      (num_8
        (dec_num_8))))
  (inst
    (zpg_opc
      (lda_opc)
      (num_8
        (bin_num_8)))))

==========================
LDA $LL,X
==========================

lda $60, x
lda 199, x
lda %1001100, x

---

(asm
  (inst
    (zpg_x_opc
      (lda_opc)
      (num_8
        (hex_num_8))
      (x_reg)))
  (inst
    (zpg_x_opc
      (lda_opc)
      (num_8
        (dec_num_8))
      (x_reg)))
  (inst
    (zpg_x_opc
      (lda_opc)
      (num_8
        (bin_num_8))
      (x_reg))))

==========================
LDA $LLHH
==========================

lda $b891
lda 47249
lda %1011100010010001

---

(asm
  (inst
    (abs_opc
      (lda_opc)
      (num_16
        (hex_num_16))))
  (inst
    (abs_opc
      (lda_opc)
      (num_16
        (dec_num_16))))
  (inst
    (abs_opc
      (lda_opc)
      (num_16
        (bin_num_16)))))

==========================
LDA $LLHH,X
==========================

lda $85fc,x
lda 1843,x
lda %11011100111000,x

---

(asm
  (inst
    (abs_x_opc
      (lda_opc)
      (num_16
        (hex_num_16))
      (x_reg)))
  (inst
    (abs_x_opc
      (lda_opc)
      (num_16
        (dec_num_16))
      (x_reg)))
  (inst
    (abs_x_opc
      (lda_opc)
      (num_16
        (bin_num_16))
      (x_reg))))

==========================
LDA $LLHH,Y
==========================

lda $dc49,y
lda 56393,y
lda %1101110001001001,y

---

(asm
  (inst
    (abs_y_opc
      (lda_opc)
      (num_16
        (hex_num_16))
      (y_reg)))
  (inst
    (abs_y_opc
      (lda_opc)
      (num_16
        (dec_num_16))
      (y_reg)))
  (inst
    (abs_y_opc
      (lda_opc)
      (num_16
        (bin_num_16))
      (y_reg))))

==========================
LDA ($LL,X)
==========================

lda ($DB, x)
lda (219, x)
lda (%11011011, x)

---

(asm
  (inst
    (x_ind_opc
      (lda_opc)
      (num_8
        (hex_num_8))
      (x_reg)))
  (inst
    (x_ind_opc
      (lda_opc)
      (num_8
        (dec_num_8))
      (x_reg)))
  (inst
    (x_ind_opc
      (lda_opc)
      (num_8
        (bin_num_8))
      (x_reg))))

==========================
LDA ($LL),Y
==========================

lda ($A9), y
lda (169), y
lda (%10101001), y

---

(asm
  (inst
    (ind_y_opc
      (lda_opc)
      (num_8
        (hex_num_8))
      (y_reg)))
  (inst
    (ind_y_opc
      (lda_opc)
      (num_8
        (dec_num_8))
      (y_reg)))
  (inst
    (ind_y_opc
      (lda_opc)
      (num_8
        (bin_num_8))
      (y_reg))))
