test/corpus/LDX.txt
==========================
LDX #$BB
==========================

ldx #$b3
ldx #233
ldx #%1101110

---

(asm
  (inst
    (imm_opc
      (ldx_opc)
      (imm_prefix)
      (num_8
        (hex_num_8))))
  (inst
    (imm_opc
      (ldx_opc)
      (imm_prefix)
      (num_8
        (dec_num_8))))
  (inst
    (imm_opc
      (ldx_opc)
      (imm_prefix)
      (num_8
        (bin_num_8)))))

==========================
LDX $LL
==========================

ldx $02
ldx 005
ldx %11011001

---

(asm
  (inst
    (zpg_opc
      (ldx_opc)
      (num_8
        (hex_num_8))))
  (inst
    (zpg_opc
      (ldx_opc)
      (num_8
        (dec_num_8))))
  (inst
    (zpg_opc
      (ldx_opc)
      (num_8
        (bin_num_8)))))

==========================
LDX $LL,Y
==========================

ldx $60,y
ldx 199,y
ldx %1001100,y

---

(asm
  (inst
    (zpg_y_opc
      (ldx_opc)
      (num_8
        (hex_num_8))
      (comma)
      (y_reg)))
  (inst
    (zpg_y_opc
      (ldx_opc)
      (num_8
        (dec_num_8))
      (comma)
      (y_reg)))
  (inst
    (zpg_y_opc
      (ldx_opc)
      (num_8
        (bin_num_8))
      (comma)
      (y_reg))))

==========================
LDX $LLHH
==========================

ldx $b891
ldx 47249
ldx %1011100010010001

---

(asm
  (inst
    (abs_opc
      (ldx_opc)
      (num_16
        (hex_num_16))))
  (inst
    (abs_opc
      (ldx_opc)
      (num_16
        (dec_num_16))))
  (inst
    (abs_opc
      (ldx_opc)
      (num_16
        (bin_num_16)))))

==========================
LDX $LLHH,Y
==========================

ldx $85fc,y
ldx 1843,y
ldx %11011100111000,y

---

(asm
  (inst
    (abs_y_opc
      (ldx_opc)
      (num_16
        (hex_num_16))
      (comma)
      (y_reg)))
  (inst
    (abs_y_opc
      (ldx_opc)
      (num_16
        (dec_num_16))
      (comma)
      (y_reg)))
  (inst
    (abs_y_opc
      (ldx_opc)
      (num_16
        (bin_num_16))
      (comma)
      (y_reg))))
