test/corpus/LDY.txt
==========================
LDY #$BB
==========================

ldy #$b3
ldy #233
ldy #%1101110

---

(asm
  (inst
    (imm_opc
      (ldy_opc)
      (num_8
        (hex_num_8))))
  (inst
    (imm_opc
      (ldy_opc)
      (num_8
        (dec_num_8))))
  (inst
    (imm_opc
      (ldy_opc)
      (num_8
        (bin_num_8)))))

==========================
LDY $LL
==========================

ldy $02
ldy 005
ldy %11011001

---

(asm
  (inst
    (zpg_opc
      (ldy_opc)
      (num_8
        (hex_num_8))))
  (inst
    (zpg_opc
      (ldy_opc)
      (num_8
        (dec_num_8))))
  (inst
    (zpg_opc
      (ldy_opc)
      (num_8
        (bin_num_8)))))

==========================
LDY $LL,X
==========================

ldy $60,x
ldy 199,x
ldy %1001100,x

---
